# docent

./: CLAUDE.md  Cargo.toml  PRODUCT.md  README.md  TODO.md
.claude/: settings.local.json
nvim/lua/docent/: client.lua  diff.lua  init.lua  minimap.lua  state.lua
src/: app.rs  colors.rs  constants.rs  editor.rs  github.rs  headless.rs  input.rs  layout.rs  main.rs  protocol.rs  scroll.rs  search.rs  session.rs  settings.rs
src/api/: client.rs  mod.rs  types.rs
src/diff/: filter.rs  mod.rs  parser.rs
src/generation/: generator.rs  mod.rs
src/model/: mod.rs  walkthrough.rs
src/ui/: diff_viewer.rs  explanation.rs  minimap.rs  mod.rs  setup.rs
