[package]
name = "docent"
version = "0.1.0"
edition = "2024"
description = "AI-guided code review walkthrough tool"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["use-dev-tty"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
tui-textarea = "0.7"
dirs = "6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
thiserror = "1"
unidiff = "0.4"
globset = "0.4"
clap = { version = "4", features = ["derive"] }
